# team-drop-database

./: .gitignore  README.md  compose.aws.yml  compose.production.yml  docker-compose.yml  start-docker-all.sh
.github/workflows/: build_docker.yml  ci_pipeline.yml  deploy_aws.yml  deploy_docker.yml  deploy_k8s.yml  main.yml  publish-ghcr.yml
bruno/: bruno.json  get all users.bru
bruno/ai/: query.bru
bruno/attractions/: Create City.bru  Create a new attraction.bru  Get Cities.bru  folder.bru  get all attractions.bru  mock new attraction.bru  test json upload.bru
bruno/auth/: Connection (Admin).bru  Connection (Manager).bru  Connection (User).bru  Connection.bru  Log in.bru  Sign up.bru
bruno/environments/: aws.bru  dev.bru  k8s.bru
bruno/users/: get all users.bru
client/travel-buddy/: .env.development  .env.production  Dockerfile  docker-compose.yml  jest.config.json  package-lock.json  package.json
docker/: postgres.yml
documentation/: REST_API_Documentation.md  analysis_object_model_plantUML.txt  problem_statement.md  product backlog.md  top_level_arch_plantUML.txt  use_case_diagram_plantUML.txt
genai/: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_SUMMARY.md  README_VECTOR_SEARCH.md  docker-compose.yml  import_attractions.py  pyproject.toml  pytest.ini  quick_start.sh  readme.md  requirements.txt  switch_model.py  test_qa_fixed.py
genai/docs/: workflow.txt
genai/tests/: __init__.py  conftest.py
genai/tests/integration/: test_qa_integration.py
genai/tests/unit/: test_llm_models.py  test_qa_system.py
genai/travel_buddy_ai/: main.py
genai/travel_buddy_ai/api/: recommendation_api.py  v1.py  vector_api.py
genai/travel_buddy_ai/core/: config.py  db.py  logger.py  state.py
genai/travel_buddy_ai/models/: attractions.py  attractions_simple.py  common.py  llm_models.py
genai/travel_buddy_ai/pipelines/parser/: __init__.py  base.py  keyword_parser.py  llm_parser.py  schema.py
genai/travel_buddy_ai/pipelines/retriever/: __init__.py  retriever.py
genai/travel_buddy_ai/repositories/: attraction_repository.py  simple_attraction_reader.py
genai/travel_buddy_ai/services/: generic_vector_service.py  qa_system_fixed.py  recommendation_service.py  vector_service.py
genai/travelbuddy_ai/: docker-compose.yml
genai/travelbuddy_ai/.run/: travelbuddy-ai.run.xml
genai/travelbuddy_ai/travel_buddy_ai/: config.py  gunicorn_conf.py  main.py
genai/travelbuddy_ai/travel_buddy_ai/api/: v1.py
genai/travelbuddy_ai/travel_buddy_ai/pipelines/parser/: base.py  keyword_parser.py  llm_parser.py  schema.py  spacy_parser.py
genai/travelbuddy_ai/travel_buddy_ai/pipelines/retriever/: __init__.py  retriever.py
grafana/: docker-compose.yml
grafana/prometheus/: prometheus.yml
helm/travel-buddy/: Chart.yaml  values.yaml
prometheus/: docker-compose.yml
server/: build.gradle
server/AttractionService/: .dockerignore  (+3 more)
(+323 files in other folders)
