[project]
name = "travel_buddy_ai"
version = "0.1.0"
description = "AI-powered travel companion service"
authors = [
  { name = "Haochuan Huai", email = "haochuan.huai@tum.de" }
]
requires-python = ">=3.10,<3.14"

dependencies = [
    "fastapi>=0.115.13,<0.116.0",
    "uvicorn[standard]>=0.34.3,<0.35.0",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.9.1,<3.0.0",
    "langchain>=0.3.26,<0.4.0",
    "langchain-openai>=0.3.24,<0.4.0",
    "langchain-qdrant>=0.1.0,<0.3.0",
    "qdrant-client>=1.14.3,<2.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "openai>=1.6.0,<2.0.0",
    "requests>=2.31.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "fastembed>=0.3.0,<1.0.0",
    "multidict>=6.6.3,<7.0.0",
    "tenacity>=9.1.2",
    "prometheus-client (>=0.22.1,<0.23.0)"
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["travel_buddy_ai"]
